ipc/ipdl/test/ipdl/error/syncParentToChild.ipdl
rpc protocol syncParentToChild {

    // can't declare sync parent-to-child messages
child: sync Msg();

};
